<resources>
    <string name="app_name">Reel-y Good Movies</string>
    <string name="movie_info">Your Movie Info</string>
    <string name="movie_name_label">Movie name</string>
    <string name="genre_label">Genre:</string>
    <string name="comedy_label">Comedy</string>
    <string name="family_label">Family</string>
    <string name="drama_label">Drama</string>
    <string name="horror_label">Horror</string>
    <string name="action_label">Action</string>
    <string name="thriller_label">Thriller</string>
    <string name="science_fiction_label">Science Fiction</string>
    <string name="romance_label">Romance</string>
    <string name="adventure_label">Adventure</string>
    <string name="war_label">War</string>
    <string name="animation_label">Animation</string>
    <string name="doco_label">Doco</string>
    <string name="plot_label">Plot:</string>
    <string name="movie_length_label">Movie length:</string>
    <string name="hours_label">hours</string>
    <string name="minutes_label">minutes</string>
    <string name="movie_year_label">Movie year:</string>
    <string name="calendar_year_icon">calendar year icon</string>
    <string name="selected_year_label">0</string>
    <string name="movie_rate_label">Movie rate:</string>
    <string name="movie_image_label">Movie image:</string>
    <string name="add_photo_icon">add photo icon</string>
    <string name="add_movie_label">Add movie!</string>
    <string name="movie_photo">movie photo</string>
    <string name="item_movie_image">item movie image</string>
    <string name="movie_title_label">Movie title</string>
    <string name="movie_genre_label">Movie genre</string>
    <string name="movies_list_label">Movies list</string>
    <string name="title_icon">Title movie icon</string>
    <string name="list_of_items">List of items</string>
    <string name="edit_movie_bt">edit movie</string>
    <string name="back_button">back button</string>
    <string name="choose_year">choose year</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="item_deletion">"The movie %1$s has been deleted successfully!"</string>
    <string name="year_label">Year:</string>
    <string name="rating_label">Rating:</string>
    <string name="length_label">Length:</string>
    <string name="minutes">minutes</string>
    <string name="please_fill_in_all_the_required_fields">Please fill in all the required fields.</string>
    <string name="movie_added">Movie %1$s has been added successfully!</string>
    <string name="valid_title">Please enter a title.</string>
    <string name="valid_genre">Please select at least one genre.</string>
    <string name="valid_plot">Please enter a plot.</string>
    <string name="valid_ength">Please select valid movie length.</string>
    <string name="valid_year">Please select a year.</string>
    <string name="valid_rating">Please select a rating.</string>
    <string name="button_mode">Add movie!</string>
    <string name="edit_success">Movie %1$s successfully edited!</string>
    <string name="delete_message">Are you sure you want to delete this movie?</string>
    <string name="delete_all_message">Are you sure you want to delete all of the movies?</string>
    <string name="delete">Delete</string>
    <string name="warning_before_item_delete">Warning before item delete</string>
    <string name="all_movies_deleted_confirmation">All movies deleted!</string>
    <string name="open">open</string>
    <string name="close">close\n</string>
    <string name="like_movie">like movie</string>
    <string name="mic_talk">please talk clearly and slowly"</string>
    <string name="mic_search_button">mic search</string>
    <string name="all_movies_label">Most Popular Movies!</string>
    <string name="add_new_movie_label">Add new movie!</string>
    <string name="search_movie_label">Search movie:</string>
    <string name="favorite_movies_label">Your Favorite Movies!</string>
    <string name="funny_icon">funny icon</string>
    <string name="thrill_icon">thrill icon</string>
    <string name="relax_icon">relax icon</string>
    <string name="fantasy_icon">fantasy icon</string>
    <string name="romantic_icon">romantic icon</string>
    <string name="movie_genre_mood_label">Find Your Movie By Your Mood!</string>
    <string name="comedy_label_genre_mood">Laugh Out Loud</string>
    <string name="thrill_label_genre_mood">Feel the Thrill</string>
    <string name="relax_label_genre_mood"><![CDATA[Chill & Relax]]></string>
    <string name="fantasy_label_genre_mood">Escape Reality</string>
    <string name="romantic_label_genre_mood">Heartfelt</string>
    <string name="crime_label">crime</string>
    <string name="fantasy_label">fantasy</string>
    <string name="history_label">history</string>
    <string name="music_label">music</string>
    <string name="mystery">mystery</string>
    <string name="TVMovie_label">TV-movies</string>
    <string name="western_label">western</string>
    <string name="unknown_genre">Unknown</string>
    <string name="error_API_from_local_DB">This movie was added by the user</string>
    <string name="no_movies_found">No movies found</string>
    <string name="permission_denied">Permission denied</string>
    <string name="network_error">No internet connection. Please check your connection.</string>
    <string name="not_found_error">No movies found.</string>
    <string name="bad_request_error">The request was invalid. Please check the data and try again.</string>
    <string name="internal_server_error">A server error occurred. Please try again later.</string>
    <string name="unknown_error">An unexpected error occurred. Please try again.</string>
    <string name="language_speak">Please choose the language you want to speak</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="share_movie_title">Choose a contact to share the movie</string>
    <string name="share_movie_error">Error sending message</string>
    <string name="sms_body">Hey, check out this movie: %1$s\n\nPlot: %2$s\n\nRating: %3$.1f/5</string>
    <string name="cancel_button">Cancel</string>
    <string name="trailer_not_available">Trailer not available</string>
    <string name="error_opening_video">Error opening the video: %1$s</string>
    <string name="open_youtube_error">Error opening YouTube</string>
    <string name="all_movies_label_menu">All movies</string>
    <string name="your_favorites_label_menu">Your Favorites</string>
    <string name="your_mood_label_menu">Your Mood</string>
    <string name="trailer_movie_title">Trailer</string>
    <string name="trailer_text">Hope you enjoy watching the trailer! if you liked it put it in favorite or share with your contacts!</string>

</resources>