<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/movie_picture"
            android:id="@+id/iv_item_movie_image"
            android:contentDescription="@string/item_movie_image"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_label"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/tv_item_movie_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_genre_label"
                android:layout_gravity="center"
                android:id="@+id/tv_item_movie_genre" />

            <RatingBar
                android:id="@+id/rb_item_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:scaleX="0.4"
                android:scaleY="0.4"
                android:stepSize="1"
                android:numStars="5"
                android:rating="3"
                android:layout_gravity="center"
                android:isIndicator="true"/>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_item_edit_"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_edit_24"
        android:layout_gravity="end|center"
        android:background="@null"
        android:contentDescription="@string/edit_movie_bt"/>

</androidx.cardview.widget.CardView>