<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="@null"
            android:contentDescription="@string/back_button"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_edit_24"
            android:background="@null"
            android:contentDescription="@string/edit_movie_bt"
            android:layout_marginStart="275dp"/>

    </LinearLayout>


        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name_label"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center|bottom"
            android:layout_marginBottom="16dp" />


        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/item_movie_image"
            android:src="@mipmap/ic_launcher" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genres:"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/tv_movie_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Year:"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_movie_year"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_movie_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rating: "
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rb_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:rating="3"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Plot:"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_movie_plot"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Length:"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />
            <TextView
                android:id="@+id/tv_movie_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
