<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <!-- קונטיינר לכותרת ולחיפוש -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- כותרת - סרטים רצים עכשיו -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest_movies_label"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- כותרת חיפוש -->
        <TextView
            android:id="@+id/tv_search_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_movie_label"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <!-- חיפוש -->
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_movie" />

        <ImageButton
            android:id="@+id/ib_micSearch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_mic_24"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            android:contentDescription="@string/mic_search_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- רשימת הסרטים -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_container"
        app:layout_constraintBottom_toTopOf="@id/linear_add" />


    <!-- כותרת Add new movie והכפתור -->
    <LinearLayout
        android:id="@+id/linear_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:padding="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddItem"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/add_photo_icon" />


        <TextView
            android:id="@+id/tv_add_movie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_movie_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:gravity="start" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



<!--

<TextView
android:id="@+id/tv_top20_movies"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="Top 20:"
android:textColor="@android:color/black"
android:layout_marginTop="8dp"
android:textSize="18sp"
android:textStyle="bold"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@id/searchView"/>
<TextView
android:id="@+id/tv_all_movies"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="All newest movies!!!"
android:textColor="@android:color/black"
android:layout_marginTop="8dp"
android:textSize="18sp"
android:textStyle="bold"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@+id/recycler"/>

    &lt;!&ndash; רשימה נגללת נוספת למטה &ndash;&gt;
<androidx.recyclerview.widget.RecyclerView
android:id="@+id/recycler_bottom"
android:layout_width="match_parent"
android:layout_height="0dp"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@id/recycler"
app:layout_constraintBottom_toBottomOf="parent" />
-->
